prompts to update to 1.3.101
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_1_8/madman/Rpacks/EBImage@18871 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,8 @@ export(
 
     "read.image", "ping.image",
 
-    "objectCount"
+    "objectCount",
+    "upgradeEBImage", "upgradeEBImageDev"
 )
 exportClasses(
     "array", "Image2D", "Image3D"
