upgrade -> update in Namespace
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_1_8/madman/Rpacks/EBImage@18874 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,7 @@ export(
     "read.image", "ping.image",
 
     "objectCount",
-    "upgradeEBImage", "upgradeEBImageDev"
+    "updateEBImage", "updateEBImageDev"
 )
 exportClasses(
     "array", "Image2D", "Image3D"
