failing vignette removed - version 1.3.101 contains a comprehensive vignette
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_1_8/madman/Rpacks/EBImage@18885 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: EBImage
-Version: 1.2.1
-Date: 18 Jul 2006
+Version: 1.2.2
+Date: 19 Jul 2006
 Title: EBImage: R image processing toolkit
 Author: Oleg Sklyar <osklyar@ebi.ac.uk>, Wolfgang Huber <huber@ebi.ac.uk>
 Maintainer: Oleg Sklyar <osklyar@ebi.ac.uk>
 Depends: R (>= 2.0.0)
 Description: please use version 1.3.101 available from BioC SVN under revision 18870 or from the package URL below, or use the latest development version from BioC1.9 instead (http://www.bioconductor.org/packages/1.9/bioc/): API has changed!!!
-License: LPGL
+License: LGPL
 URL: http://www.ebi.ac.uk/~osklyar/projects/EBImage/
 SaveImage: yes
 biocViews: Visualization
