--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: EBImage
-Version: 3.0.1
+Version: 3.0.2
 Title: Image processing and image analysis toolkit for R
 Author: Oleg Sklyar, Gregoire Pau, Mike Smith, Wolfgang Huber
 Maintainer: Gregoire Pau <gpau@ebi.ac.uk>
-SystemRequirements: ImageMagick (>= 6.2.4), GTK+ (> 2.6) -- Windows dependencies are available from the URL below. See package vignette for installation instructions.
+SystemRequirements: ImageMagick (>= 6.2.4), GTK+ (> 2.6)
 Depends: R (>= 2.4.0), methods, graphics, stats, utils, abind
 Description: The package provides functionality to perform image processing and image analysis in R. Its supports I/O of over 95 image formats through its interface to ImageMagick and provides an extensive set of functions for image manipulation and feature extraction. The package also features some GUI options such as an interactive image viewer.
 License: Artistic-2.0
